pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/untyped-srfi1.rkt
#;
(exn-pred ".*identifier: map.*" ".*srfi.*")
#lang typed-scheme

(require srfi/1)

map
